--- a/wiki/DevelopersGuide.wiki
+++ b/wiki/DevelopersGuide.wiki
@@ -83,9 +83,11 @@ http://mptvseries.googlecode.com/svn/wiki/Images/References.jpg
 = Testing Your Setup =
 == Building and Running ==
 
-Well believe it or not you are about done, your environment should be ready to go for development purposes. The key test here is to make sure everything compiles properly, so click "Build" on the menu bar at the top and select "Build Solution". This should take a bit of time, depending on how powerful of a computer you have. Something like one to two minutes is not uncommon because of all the MediaPortal code that needs to be compiled.
+Well believe it or not you are about done, your environment should be ready to go for development purposes. The key test here is to make sure everything compiles properly, so right click "MP-TVSeries" in the Solution Explorer and select "Build". This should take a bit of time, depending on how powerful of a computer you have. Something like one to two minutes is not uncommon because of all the MediaPortal code that needs to be compiled.
 
 If everything compiled correctly, then next you will want to test that it works in MediaPortal.
+
+_Note: If you want to build the entire solution ie. All of the MediaPortal projects as well, be sure to edit the Post Build step for the MediaPortal Project. Currently it references $(SolutionDir) as its first parameter, in this case its not correct. You need to change this to reflect your MediaPortal solution directory._
 
 == Testing in MediaPortal ==
 
