--- a/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
+++ b/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
@@ -156,7 +156,7 @@
         ATABAAGmAYAB/wEAAeIBwwH/AQAB1AGkAf8BAAHSAaEB/wEAAdMBowH/AQAB0wGjAf8BAAHUAaUB/wEA
         AdQBpQH/AQAB0wGiAf8BAAHWAacB/wEAAdMBowH/AQAB1AGkAf8BAAHUAaMB/wEAAdUBpgH/AQAB1QGl
         Af8BAAHUAaQB/wEAAdQBpAH/AQAB1QGlAf8BAAHVAaUB/wEAAdQBpAH/AQAB3AG0Af8BAAG6AZIB/wFc
-        Al4BznQAA1wBzQHFAZQBAAH/AaQCAAH/AY4CAAH/AQMCAAH/AwAB/wMAAf8DAAH/AQAB2AGrAf8BAAHi
+        Al4BznQAA1wBzQHFAZQBAAH/AaQCAAH/AY4CAAH/AQICAAH/AwAB/wMAAf8DAAH/AQAB2AGrAf8BAAHi
         AbsB/wGQAcUBlwH/AcIBmAEAAf8B0gGwAQAB/wHkAcMBhgH/AzIBUAMKAQ4DBAEFJAADYAHrA6MB/wOs
         Af8DtAH/A70B/wPGAf8DzgH/A9cB/wPgAf8D4wH/AwABARgAAyEBMQEAAacBgQH/AQAB3AG2Af8BAAHT
         AaIB/wEAAdIBoAH/AQAB0gGgAf8BAAHTAaIB/wEAAdIBoQH/AQAB0wGhAf8BAAHTAaIB/wEAAc8BmwH/
@@ -164,10 +164,10 @@
         AaAB/wEAAdEBngH/AQAB0wGiAf8BAAHTAaIB/wEAAcoBqAH/AVgCXgHdcAADWwHEAbECAAH/AYwCAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AQABvQGHAf8BAAHMAZkB/wEAAdwBrgH/AYABpwEAAf8BqwIA
         Af8BxQGXAQAB/wHlAbwBAAH/AxwBKCgAA10B7QOaAf8DogH/A7UB/wO1Af8DvQH/A8gB/wPkAf8D3AH/
-        A98B/wNKAY0YAAMhATEBAAGlAQEB/wEAAdkBsQH/AQAB0gGhAf8BAAHQAZwB/wEAAdABngH/AQAB0QGe
+        A98B/wNKAY0YAAMhATEBAAGlAQAB/wEAAdkBsQH/AQAB0gGhAf8BAAHQAZwB/wEAAdABngH/AQAB0QGe
         Af8BAAHRAZ4B/wEAAdABnAH/AQABzwGbAf8B1wHoAeAB/wPpAf8D6gH/A+sB/wEAAc4BlwH/AQAB0QGe
         Af8BAAHRAZ4B/wEAAdEBnQH/AQAB0gGhAf8BAAHRAZ4B/wEAAdIBnwH/AQAB0QGdAf8BAAHGAaEB/wFY
-        Al4B3WwAAy8BSgGoAgAB/wMAAf8DAAH/AwAB/wEDAgAB/wGHAgAB/wGKAgAB/wGKAgAB/wEAAZsBAAH/
+        Al4B3WwAAy8BSgGoAgAB/wMAAf8DAAH/AwAB/wECAgAB/wGHAgAB/wGKAgAB/wGKAgAB/wEAAZsBAAH/
         AQABqQEAAf8BAAGtAQAB/wEAAbkBggH/AQABzAGYAf8BAAHgAa0B/wGYAgAB/wG9AYsBAAH/AeYBvAEA
         Af8YAANhAeYDPgFrAwUBBwNcAeoDwgH/AwAB/wOaAf8DrAH/A9UB/wPjAf8D2wH/A8EB/wPIAf8D6gH/
         A9oB/wMsAUQDQgF1A18B8wNhAeYIAAMhATEBAAGkAQAB/wEAAdQBpwH/AQAB0AGbAf8BAAHPAZsB/wEA
@@ -179,8 +179,8 @@
         A9oB/wP3Af8D9QH/A80B/wO8Af8D4gH/A84B/wPZAf8D5AH/A/AB/wMBAQIEAAMhATEBAAGhAQAB/wEA
         Ac4BnAH/AQABzgGZAf8BAAHMAZcB/wEAAcwBlwH/AQABzAGWAf8BAAHMAZYB/wEAAcwBlgH/AQABzAGX
         Af8B1gHnAd4B/wPpAf8D6AH/A+oB/wEAAcgBjQH/AQABygGVAf8BAAHMAZUB/wEAAcwBlgH/AQABywGV
-        Af8BAAHMAZcB/wEAAcwBlwH/AQABzAGXAf8BAAG8AY8B/wFYAl4B3WgAAzEBTgEDAgAB/wMAAf8BkgIA
-        Af8BnQIAAf8BsAIAAf8BuwGGAQAB/wHBAYwBAAH/AcMBkAEAAf8BAAG6AQAB/wEAAcIBggH/AQABvwED
+        Af8BAAHMAZcB/wEAAcwBlwH/AQABzAGXAf8BAAG8AY8B/wFYAl4B3WgAAzEBTgECAgAB/wMAAf8BkgIA
+        Af8BnQIAAf8BsAIAAf8BuwGGAQAB/wHBAYwBAAH/AcMBkAEAAf8BAAG6AQAB/wEAAcIBggH/AQABvwEC
         Af8BAAG9AQAB/wEAAbkBAAH/AQABsQEAAf8BAAG5AQAB/wEAAcoBjgH/AwAB/wGVAgAB/wHGAZMBAAH/
         EAAD7wH/A+gB/wPlAf8D4QH/A8oB/wPbAf8DngH/AwAB/wM+AWsDAgEDBAADDgETA1wBzwPdAf8DsgH/
         A60B/wO3Af8DwAH/A8wB/wPbAf8DOwFjBAADIQExAQABnwEAAf8BAAHKAZMB/wEAAcoBkgH/AQAByAGQ
@@ -188,79 +188,79 @@
         Af8BAAHFAYgB/wEAAcoBkwH/AQAByQGSAf8BAAHLAZMB/wEAAcoBkwH/AQABygGSAf8BAAHJAZEB/wEA
         AcoBkgH/AQABuAGIAf8BWAJeAd1oAAFiAV8BWAHpAwAB/wGUAgAB/wGkAgAB/wGyAgAB/wG9AYIBAAH/
         AccBjwEAAf8BzQGZAQAB/wHaAa0BAAH/AcABsgEAAf8BAAHVAZ4B/wEAAc0BkgH/AQABxQGHAf8BAAG+
-        AQIB/wEAAZ8BAAH/AYkCAAH/AwAB/wMAAf8BAgIAAf8BqQIAAf8DJwE6DAADvAH/A9YB/wPpAf8D5QH/
+        AQEB/wEAAZ8BAAH/AYkCAAH/AwAB/wMAAf8BAQIAAf8BqQIAAf8DJwE6DAADvAH/A9YB/wPpAf8D5QH/
         A9QB/wPeAf8DTQH6GAADKQE/A8oB/wOYAf8D0AH/A6kB/wO7Af8DAAH/AzwBZgQAAyEBMQEAAZ0BAAH/
-        AQAByAGRAf8BAAHGAYsB/wEAAcQBhgH/AQABvwEBAf8BAAHBAYAB/wEAAcABAwH/AQABwAEDAf8BAAG+
-        AQAB/wHaAekB4AH/A+0B/wPtAf8D7gH/AQABvAEAAf8BAAG/AQEB/wEAAcABAgH/AQABvgEAAf8BAAG/
-        AQIB/wEAAcIBgwH/AQAByAGPAf8BAAHGAYwB/wEAAbIBAwH/AVgCXgHdaAABgAIAAf8BjQIAAf8BqQIA
+        AQAByAGRAf8BAAHGAYsB/wEAAcQBhgH/AQABvwEAAf8BAAHBAYAB/wEAAcABAgH/AQABwAECAf8BAAG+
+        AQAB/wHaAekB4AH/A+0B/wPtAf8D7gH/AQABvAEAAf8BAAG/AQAB/wEAAcABAQH/AQABvgEAAf8BAAG/
+        AQEB/wEAAcIBgwH/AQAByAGPAf8BAAHGAYwB/wEAAbIBAgH/AVgCXgHdaAABgAIAAf8BjQIAAf8BqQIA
         Af8BugGCAQAB/wHDAYkBAAH/AdABnAEAAf8B2gGrAQAB/wHgAbUBAAH/Ad4BxgGBAf8BwwHQAZQB/wEA
         AesBwQH/AQAB4wG0Af8BAAHXAaEB/wG4AZoBAAH/AbgBhAEAAf8BnwIAAf8BggIAAf8DAAH/AwAB/wGS
         AgAB/wNSAaMMAAMlATcDvAH/A8UB/wPoAf8D5QH/A6sB/wMDAQQcAANSAaQDhgH/A7kB/wOUAf8DAAH/
         A0IBdggAAyEBMQEAAZsBAAH/AQABxAGIAf8BAAHFAYgB/wEAAc8BnQH/AdoB7AHgAf8B2gHsAeAB/wHa
         AewB3wH/AdsB7QHhAf8B2wHtAeAB/wHtAe8B7gH/A+8B/wPvAf8D8AH/AdkB7AHfAf8B2gHsAd8B/wHb
         Ae0B4AH/AdsB7QHgAf8B3AHtAeEB/wGZAdsBtgH/AQABxwGLAf8BAAHFAYkB/wEAAbEBAAH/AVoCYAHe
-        aAABAwIAAf8BnQIAAf8BugGEAQAB/wHNAZoBAAH/AdoBqwEAAf8B3wG0AQAB/wHrAcgBhAH/AecB1gGc
+        aAABAgIAAf8BnQIAAf8BugGEAQAB/wHNAZoBAAH/AdoBqwEAAf8B3wG0AQAB/wHrAcgBhAH/AecB1gGc
         Af8BngH9Ad8B/wH1AdoBpAH/AfIB1AGYAf8B7gHLAYYB/wHlAb0BAAH/AdkBqgEAAf8ByQGWAQAB/wGy
         AgAB/wGRAgAB/wMAAf8DAAH/AYICAAH/AmABWgHeFAADUQGfA+sB/wPoAf8DXwHgJwAB/wOjAf8DhQH/
         AwEBAgwAAyEBMQEAAacBAAH/AQABxwGOAf8BAAHEAYcB/wEAAc4BngH/A/EB/wPxAf8D8QH/A/EB/wPw
         Af8D8QH/A/EB/wPxAf8D8QH/A/EB/wPxAf8D8QH/A/EB/wPxAf8BpQHaAbsB/wEAAcMBhQH/AQABxAGG
         Af8BAAG1AYEB/wFYAl8B42gAAYoCAAH/AaoCAAH/AcYBkgEAAf8BzwGZAQAB/wHoAcABAAH/Ac0B2QGh
         Af8BoAH9AeAB/wHNAe8B0AH/AdUB8AHSAf8B+AHmAcMB/wHdAeYBwgH/AeoB2QGlAf8B8AHOAYoB/wHl
-        AbsBAAH/AdUBowEAAf8BwQGMAQAB/wGdAgAB/wECAgAB/wMAAf8BAAHMAZMB/wNfAeAUAAM1AVcD7gH/
+        AbsBAAH/AdUBowEAAf8BwQGMAQAB/wGdAgAB/wEBAgAB/wMAAf8BAAHMAZMB/wNfAeAUAAM1AVcD7gH/
         A+sB/wNaAcUnAAH/A6gB/wMAAf8DBAEFDAADIQExAQABpQEAAf8BAAHIAZAB/wEAAcgBjwH/AYYB1AGp
         Af8D9QH/A/UB/wP0Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0Af8D8wH/A/QB/wP0Af8D9AH/A/UB/wGy
         AeABxQH/AQAByQGQAf8BAAHKAZIB/wEAAbUBggH/AVgCXwHjaAABkQIAAf8BsgIAAf8BzgGbAQAB/wHh
-        AbQBAAH/AekBwgEBAf8BpQH4AdgB/wGrAf8B5QH/Af0B7wHUAf8B/gHzAd4B/wHxAfAB2wH/Af0B7gHR
-        Af8B+gHlAb0B/wH1AdkBoQH/AewBxgECAf8B3QGvAQAB/wHLAZcBAAH/AaYCAAH/AYICAAH/AwAB/wEA
+        AbQBAAH/AekBwgEAAf8BpQH4AdgB/wGrAf8B5QH/Af0B7wHUAf8B/gHzAd4B/wHxAfAB2wH/Af0B7gHR
+        Af8B+gHlAb0B/wH1AdkBoQH/AewBxgEBAf8B3QGvAQAB/wHLAZcBAAH/AaYCAAH/AYICAAH/AwAB/wEA
         AcgBjgH/AVgCWgHAEAADUgGnA/UB/wPyAf8D9gH/A+sB/yAAA0YBfwMAAf8DlAH/AwAB/wMAAf8DUgGp
         CAADIQExAQABpAEAAf8BAAHGAYwB/wEAAcYBiwH/AYQB1AGrAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3
         Af8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3Af8D9wH/A/cB/wG0AeIByQH/AQABxQGLAf8BAAHFAYkB/wEA
-        AbIBAgH/AVgCXwHjaAACTQEpAfoBtQEDAQAB/wHRAZ8BAAH/AeYBuwEAAf8BwgHdAagB/wGhAf0B4QH/
-        AbIB/wHnAf8B2gH4AeYB/wHfAfsB7wH/AvYB7AH/Af4B9AHgAf8B/AHrAcoB/wH4Ad4BrgH/AegBwQED
+        AbIBAQH/AVgCXwHjaAACTQEpAfoBtQECAQAB/wHRAZ8BAAH/AeYBuwEAAf8BwgHdAagB/wGhAf0B4QH/
+        AbIB/wHnAf8B2gH4AeYB/wHfAfsB7wH/AvYB7AH/Af4B9AHgAf8B/AHrAcoB/wH4Ad4BrgH/AegBwQEC
         Af8B4wG2AQAB/wHQAZ4BAAH/AasCAAH/AYcCAAH/AQABvwGAAf8BAAHHAYsB/wM6AWIMAAP8Af8D/AH/
         A/gB/wP1Af8D9AH/A+4B/wNlAeUYAAMSARgDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DSgGNBAADIQEx
         AQABogEAAf8BAAHEAYgB/wEAAcQBhwH/AQABwgGGAf8BAAHDAYcB/wEAAcUBiwH/AQABxQGKAf8BAAHG
-        AYsB/wEAAcQBhwH/AeQB8QHpAf8D+QH/A/kB/wP5Af8BAAG/AQMB/wEAAcMBhwH/AQABxQGKAf8BAAHE
-        AYkB/wEAAcUBiQH/AQABxQGJAf8BAAHDAYcB/wEAAcUBiQH/AQABtAECAf8BWAJfAeNoAANKAYsBtAEC
+        AYsB/wEAAcQBhwH/AeQB8QHpAf8D+QH/A/kB/wP5Af8BAAG/AQIB/wEAAcMBhwH/AQABxQGKAf8BAAHE
+        AYkB/wEAAcUBiQH/AQABxQGJAf8BAAHDAYcB/wEAAcUBiQH/AQABtAEBAf8BWAJfAeNoAANKAYsBtAEB
         AQAB/wHSAZ8BAAH/AecBvQEAAf8BuwHkAbMB/wGiAf0B4QH/AbIB/wHoAf8BwQH/Ae0B/wHOAf8B8gH/
         AcsB/wHxAf8B/AHzAeQB/wH8Ae0BzgH/AfYB3AGvAf8B6gHEAYMB/wHlAbgBAAH/AdEBngEAAf8BpAIA
         Af8BhgIAAf8BAAGxAQAB/wEAAcYBiQH/AwABAQwAA84F/wP8Af8D+QH/A/UB/wP5Af8D7gH/A18B+wMe
         ASsLAAEBA0sBjgPXAf8DpgH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DTAGQBAADIQExAQABoQEAAf8BAAHD
         AYQB/wEAAcEBgAH/AQABxAGEAf8BAAHDAYIB/wEAAcQBhAH/AQABwwGDAf8BAAHDAYMB/wEAAcMBggH/
-        AeYB8gHqAf8D+gH/A/oB/wP6Af8BAAG/AQEB/wEAAcMBgwH/AQABwwGDAf8BAAHCAYIB/wEAAcQBhAH/
-        AQABwwGEAf8BAAHAAQMB/wEAAcMBggH/AQABsgEAAf8BWAJfAeNrAAEBAa8CAAH/Ac0BmgEAAf8B5QG5
+        AeYB8gHqAf8D+gH/A/oB/wP6Af8BAAG/AQAB/wEAAcMBgwH/AQABwwGDAf8BAAHCAYIB/wEAAcQBhAH/
+        AQABwwGEAf8BAAHAAQIB/wEAAcMBggH/AQABsgEAAf8BWAJfAeNrAAEBAa8CAAH/Ac0BmgEAAf8B5QG5
         AQAB/wGCAfYB0QH/AZ0B/QHfAf8BrAH/AeUB/wG4Af8B6gH/AcAB/wHtAf8BvwH/AewB/wG2Af8B6QH/
-        AfkB5gHGAf8B9AHXAagB/wHpAcEBAwH/AdkBpgEAAf8BxQGMAQAB/wGmAgAB/wGDAgAB/wEAAcABggH/
+        AfkB5gHGAf8B9AHXAagB/wHpAcEBAgH/AdkBpgEAAf8BxQGMAQAB/wGmAgAB/wGDAgAB/wEAAcABggH/
         AU4CXQHwEAADVAGvA/gB/wPtAf8D6gH/A90B/wP1Af8D+AH/A+4B/wPrAf8D6AH/A+UB/wPhAf8D3gH/
         A9cB/wO/Af8DpgH/AwAB/wPqAf8D6wH/A8gB/wMGAQgEAAMhATEBAAGfAQAB/wEAAcIBhAH/AQABwQGB
-        Af8BAAHAAQMB/wEAAcABgAH/AQABwQGAAf8BAAHBAYEB/wEAAcEBgQH/AQABvwEBAf8B6AHzAesB/wP8
-        Af8D/AH/A/wB/wEAAboBAAH/AQABwQGBAf8BAAHCAYIB/wEAAcABAwH/AQABwgGCAf8BAAHBAYAB/wEA
-        AcABAwH/AQABwQGAAf8BAAGzAQAB/wFYAl8B42wAA1UBsgHEAY8BAAH/Ad0BrwEAAf8BxAHSAZUB/wGV
+        Af8BAAHAAQIB/wEAAcABgAH/AQABwQGAAf8BAAHBAYEB/wEAAcEBgQH/AQABvwEAAf8B6AHzAesB/wP8
+        Af8D/AH/A/wB/wEAAboBAAH/AQABwQGBAf8BAAHCAYIB/wEAAcABAgH/AQABwgGCAf8BAAHBAYAB/wEA
+        AcABAgH/AQABwQGAAf8BAAGzAQAB/wFYAl8B42wAA1UBsgHEAY8BAAH/Ad0BrwEAAf8BxAHSAZUB/wGV
         AfwB3AH/AaEB/gHhAf8BrAH/AeUB/wHMAfcB3wH/AbcB/QHlAf8BqQH+AeQB/wHIAekBxgH/AbYB5gG7
         Af8B5QG6AQAB/wHVAZ8BAAH/Ab0BgwEAAf8BmgIAAf8DAAH/AQABvAGAAf8DCwEPEwABAQPqAf8DbQH3
         A0IBdgNfAfsD1wH/A/UB/wPyAf8D9wH/A+8B/wPnAf8D2wH/A88B/wPeAf8D2wH/AwAB/wNCAXQDMwFS
-        A10B0gNNAfoIAAMhATEBAAGcAQAB/wEAAcIBhQH/AQABvgEAAf8BAAG/AQEB/wEAAb4BAAH/AQABvgEB
-        Af8BAAG9AQAB/wEAAb0BAAH/AQABvgEAAf8B5wH0AewB/wP9Af8D/QH/A/0B/wEAAboBAAH/AQABwAED
-        Af8BAAG+AQEB/wEAAb0BAAH/AQABvQEAAf8BAAG9AQAB/wEAAb4BAQH/AQABvwECAf8BAAG1AQEB/wFY
+        A10B0gNNAfoIAAMhATEBAAGcAQAB/wEAAcIBhQH/AQABvgEAAf8BAAG/AQAB/wEAAb4BAAH/AQABvgEA
+        Af8BAAG9AQAB/wEAAb0BAAH/AQABvgEAAf8B5wH0AewB/wP9Af8D/QH/A/0B/wEAAboBAAH/AQABwAEC
+        Af8BAAG+AQAB/wEAAb0BAAH/AQABvQEAAf8BAAG9AQAB/wEAAb4BAAH/AQABvwEBAf8BAAG1AQAB/wFY
         Al8B43AAAysB/AHQAZ0BAAH/AeUBugEAAf8BkgHxAcgB/wGUAfwB2wH/AZwB/QHfAf8BoAH9AeAB/wHn
         AeQBvgH/AZoB/QHeAf8BkgH7AdkB/wHdAcIBgwH/Ad0BrAEAAf8BzgGVAQAB/wGvAgAB/wGOAgAB/wEA
         AawBAAH/AU4CTQGWJAADAwEEA6gB/QP4Af8D9QH/A/IB/wPuAf8D6wH/A+gB/wPlAf8D4QH/A94B/wNZ
         Ab4YAAMhATEBAAGbAQAB/wEAAccBiwH/AQABvAEAAf8BAAG9AQAB/wEAAb0BAAH/AQABvAEAAf8BAAG9
         AQAB/wEAAb0BAAH/AQABugEAAf8B6AH0AewB/wP+Af8D/gH/A/4B/wEAAbgBAAH/AQABvQEAAf8BAAG8
         AQAB/wEAAb0BAAH/AQABvQEAAf8BAAG8AQAB/wEAAb4BAAH/AQABuwEAAf8BAAG5AYAB/wFYAl8B43AA
-        AwIBAwJ/AUQB/gHUAaIBAAH/AYkB3QGpAf8BAgH2Ac8B/wGMAfsB1wH/AaIB9AHNAf8B2wHdAakB/wHQ
+        AwIBAwJ/AUQB/gHUAaIBAAH/AYkB3QGpAf8BAQH2Ac8B/wGMAfsB1wH/AaIB9AHNAf8B2wHdAakB/wHQ
         AdkBogH/AeUBvAEAAf8BogHMAZMB/wHRAZkBAAH/Ab4BgwEAAf8BjAIAAf8BAAGpAQAB/wFXAloBxSwA
         A0MBeAP8Af8D+AH/A+kB/wPqAf8D6gH/A+cB/wPpAf8D5QH/A+EB/wMXASAYAAMgAS4BAAGaAQAB/wEA
         AckBjwH/AQABvAEAAf8BAAG4AQAB/wEAAbsBAAH/AQABuwEAAf8BAAG8AQAB/wEAAbwBAAH/AQABuQEA
         Af8BkQHYAbIB/wGaAdoBuQH/AZoB2gG5Af8BlwHZAbYB/wEAAbsBAAH/AQABuwEAAf8BAAG7AQAB/wEA
-        AbwBAAH/AQABuwEAAf8BAAG7AQAB/wEAAbwBAAH/AQABvAEAAf8BAAG5AQMB/wFdAWEBXQHidwABAQJd
+        AbwBAAH/AQABuwEAAf8BAAG7AQAB/wEAAbwBAAH/AQABvAEAAf8BAAG5AQIB/wFdAWEBXQHidwABAQJd
         AU4B8AEAAdsBpAH/AQAB5wG1Af8BmAHcAaYB/wGPAeMBsQH/AZMB6QG2Af8BgAHnAbUB/wGXAcwBkAH/
         AQAB3wGpAf8BlAGbAQAB/wGgAgAB/wMAAf8DSAGGMAADXQHtBP8D/AH/AwAB/wNMAZADXAHNA0IBdAPJ
         Af8D6AH/A+UB/wNNAZEYAAMWAR8BAAGaAQAB/wEAAc4BlgH/AQABuQEAAf8BAAG6AQAB/wEAAboBAAH/
         AQABuQEAAf8BAAG6AQAB/wEAAbkBAAH/AQABugEAAf8BAAG6AQAB/wEAAbkBAAH/AQABuQEAAf8BAAG5
         AQAB/wEAAboBAAH/AQABuQEAAf8BAAG6AQAB/wEAAbgBAAH/AQABugEAAf8BAAG5AQAB/wEAAbkBAAH/
-        AQABuQEAAf8BAAG5AQMB/wFeAWEBXgHafAADLAFEAUoCXwH7Ac4BmwEAAf8BuQGoAQAB/wGmAbQBAAH/
-        AbQBowEAAf8BAAHZAaIB/wEBAZ4BAAH/AZ4CAAH/AVoCXgHVAwQBBjQAA2IB7wPrAf8DzgH/AzwBZgwA
+        AQABuQEAAf8BAAG5AQIB/wFeAWEBXgHafAADLAFEAUoCXwH7Ac4BmwEAAf8BuQGoAQAB/wGmAbQBAAH/
+        AbQBowEAAf8BAAHZAaIB/wEAAZ4BAAH/AZ4CAAH/AVoCXgHVAwQBBjQAA2IB7wPrAf8DzgH/AzwBZgwA
         A1oBvQP1Af8D6gH/A04BlRgAAwUBBwEAAZUBAAH/AQABwwGGAf8BAAHGAYQB/wEAAbcBAAH/AQABtwEA
         Af8BAAG4AQAB/wEAAbgBAAH/AQABuQEAAf8BAAG2AQAB/wEAAbkBAAH/AQABtwEAAf8BAAG2AQAB/wEA
         AbcBAAH/AQABuAEAAf8BAAG5AQAB/wEAAbgBAAH/AQABuAEAAf8BAAG5AQAB/wEAAbgBAAH/AQABuAEA
@@ -688,6 +688,9 @@ local/online refresh of series.
 This is active when first starting MP or when resuming from standby. A manual scan
 can be started within plugin.</value>
   </data>
+  <metadata name="toolTip_InfoHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
   <metadata name="toolTip_InfoHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 56</value>
   </metadata>
